commit from branch

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,10 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Dashboard
+Dashboard 
 {% endblock %}
+<!-- TO TEST BRANCH -->
+<!-- TO TEST BRANCH2 -->
 
 <!-- {% block styles %}
 {{super()}}
