--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,6 +5,7 @@ Dashboard
 {% endblock %}
 <!-- TO TEST BRANCH -->
 <!-- TO TEST BRANCH2 -->
+<!-- TO TEST BRANCH3 -->
 
 <!-- {% block styles %}
 {{super()}}
