--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,36 +16,7 @@
     
     <body>
 
-      <nav class="navbar navbar-default navbar-fixed-top">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>                        
-            </button>
-          <a class="navbar-brand" href="/">NAUM</a>
-          </div>
-          <div class="collapse navbar-collapse" id="myNavbar">
-            {% if current_user.username %}
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="/dashboard">Dashboard</a></li>
-                <li><a href="/change">Change Password</a></li>
-                <li><a href="/logout">Log Out</a></li>
-              </ul>
-            {% else %}
-              <ul class="nav navbar-nav navbar-right">
-                <li><a href="#about">ABOUT</a></li>
-                <li><a href="#services">SERVICES</a></li>
-                <li><a href="#portfolio">PORTFOLIO</a></li>
-                <li><a href="#contact">CONTACT</a></li>
-                <li><a href="/signup">SIGN UP</a></li>
-                <li><a href="/login">LOGIN</a></li>
-              </ul>
-            {% endif %}
-          </div> 
-        </div>
-      </nav>
+      {% include 'navbar.html' %}
 
         {% block content %}{% endblock %}
 
