--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@ Login
 
 {% block styles %}
 {{super()}}
-<link rel="stylesheet" href="{{url_for('.static', filename='signin.css')}}">
+<link rel="stylesheet" href="{{url_for('.static', filename='styles.css')}}">
 {% endblock %}
 
 {% block content %}
