--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -51,7 +51,7 @@ Dashboard
           <tr>
             <td>{{row.id}}</td>
             <td>{{row.owner_id}}</td>
-            <td>{{row.date}}</td>
+            <td>{{row.date_added}}</td>
             <td>{{row.truck_id}}</td>
             <td>{{row.last_name}}</td>
             <td>{{row.customer}}</td>
@@ -83,7 +83,7 @@ Dashboard
                       </div>
                         <div class="form-group">
                           <label>Date:</label>
-                          <input type="date" class="form-control" name="date" value="{{row.date}}">
+                          <input type="date" class="form-control" name="date_added" value="{{row.date_added}}">
                         </div>
                         <div class="form-group">
                           <label>Truck:</label>
@@ -152,7 +152,7 @@ Dashboard
                       </div>
                         <div class="form-group">
                           <label>Date:</label>
-                          <input type="date" class="form-control" name="date" value="{{row.date}}">
+                          <input type="date" class="form-control" name="date_added" value="{{row.date_added}}">
                         </div>
                         <div class="form-group">
                           <label>Truck:</label>
