--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -16,19 +16,18 @@ Dashboard
     <div class="col md-12">
       <div class="jumbotron p-3">
         <h2>Manage <b>Routes</b> <button type="button" class="btn btn-success float-right" data-toggle="modal" data-target="#mymodal">Add New Routes</button></h2>
-
-        {% with messages = get_flashed_messages() %}
-          {% if messages %}
-            {% for message in messages %}
-              <div class="alert alert-success alert-dismissable" role="alert">
-                <button type="button" class="close" data-dismiss="alert" aria-label="close">
-                  <span aria-hidden="true">x</span>
-                </button>
-                {{ message }}
-              </div>
-            {% endfor %}
-          {% endif %}
-        {% endwith %}
+          {% with messages = get_flashed_messages() %}
+            {% if messages %}
+              {% for message in messages %}
+                <div class="alert alert-success alert-dismissable" role="alert">
+                  <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                    <span aria-hidden="true">x</span>
+                  </button>
+                  {{ message }}
+                </div>
+              {% endfor %}
+            {% endif %}
+          {% endwith %}
 
         <table class="table table-hover table-dark">
           <tr>
@@ -47,11 +46,11 @@ Dashboard
             <th>Comment</th>
             <th>Action</th>
           </tr>
-          {% for row in routes %}
+          {% for row in rows %}
           <tr>
             <td>{{row.id}}</td>
             <td>{{row.owner_id}}</td>
-            <td>{{row.date}}</td>
+            <td>{{row.date_added.strftime('%m/%d/%Y') }}</td>
             <td>{{row.truck_id}}</td>
             <td>{{row.last_name}}</td>
             <td>{{row.customer}}</td>
@@ -68,74 +67,6 @@ Dashboard
             </td>
           </tr>
 
-          <!-- Modal Add Route-->
-          <div id="mymodal" class="modal fade" role="dialog">
-            <div class="modal-dialog">
-              <div class="modal-content">
-                  <div class="modal-header">
-                    <h4 class="modal-title">Add Route</h4>
-                  </div>
-                  <div class="modal-body">
-                    <form action="{{url_for('insert')}}" method="POST">
-                      <div class="form-group">
-                        <label>Driver ID:</label>
-                        <input type="number" class="form-control" name="owner_id" value="{{row.owner_id}}">
-                      </div>
-                        <div class="form-group">
-                          <label>Date:</label>
-                          <input type="date" class="form-control" name="date" value="{{row.date}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Truck:</label>
-                          <input type="number" class="form-control" name="truck_id" value="{{row.truck_id}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Driver:</label>
-                          <input type="text" class="form-control" name="last_name" value="{{row.last_name}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Customer:</label>
-                          <input type="text" class="form-control" name="customer" value="{{row.customer}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Loading point:</label>
-                          <input type="text" class="form-control" name="loading" value="{{row.loading}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Unloading point:</label>
-                          <input type="text" class="form-control" name="unloading" value="{{row.unloading}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Received amount:</label>
-                          <input type="number" class="form-control" name="received" value="{{row.received}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Shipping price:</label>
-                          <input type="number" class="form-control" name="price" value="{{row.price}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Payment method:</label>
-                          <input type="text" class="form-control" name="payment" value="{{row.payment}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Debt:</label>
-                          <input type="number" class="form-control" name="debt" value="{{row.debt}}">
-                        </div>
-                        <div class="form-group">
-                          <label>Comment:</label>
-                          <input type="text" class="form-control" name="comment" value="{{row.comment}}">
-                        </div>
-                        <div class="form-group">
-                          <button class="btn btn-primary" type="submit">Add</button>
-                        </div>
-                    </form>
-                  </div>
-                  <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                  </div>
-              </div>
-            </div>
-          </div>
 
           <!-- Modal Edit Route-->
           <div id="modaledit{{row.id}}" class="modal fade" role="dialog">
@@ -148,12 +79,13 @@ Dashboard
                     <form action="{{url_for('update')}}" method="POST">
                       <div class="form-group">
                         <label>Driver ID:</label>
+                        <input type="hidden"  name="id" value="{{row.id}}">
                         <input type="number" class="form-control" name="owner_id" value="{{row.owner_id}}">
                       </div>
-                        <div class="form-group">
+                        <!-- <div class="form-group">
                           <label>Date:</label>
-                          <input type="date" class="form-control" name="date" value="{{row.date}}">
-                        </div>
+                          <input type="date" class="form-control" name="date_added" value="{{row.date_added}}">
+                        </div> -->
                         <div class="form-group">
                           <label>Truck:</label>
                           <input type="number" class="form-control" name="truck_id" value="{{row.truck_id}}">
@@ -210,12 +142,87 @@ Dashboard
       </div>
 
 
+          <!-- Modal Add Route-->
+          <div id="mymodal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+              <div class="modal-content">
+                  <div class="modal-header">
+                    <h4 class="modal-title">Add Route</h4>
+                  </div>
+                  <div class="modal-body">
+                    <form action="{{url_for('insert')}}" method="POST">
+                      <div class="form-group">
+                        <label>Driver ID:</label>
+                        <input type="number" class="form-control" name="owner_id" value="{{row.owner_id}}">
+                      </div>
+                        <!-- <div class="form-group">
+                          <label>Date:</label>
+                          <input type="date" class="form-control" name="date_added" value="{{row.date_added}}">
+                        </div> -->
+                        <div class="form-group">
+                          <label>Truck:</label>
+                          <input type="number" class="form-control" name="truck_id" value="{{row.truck_id}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Driver:</label>
+                          <input type="text" class="form-control" name="last_name" value="{{row.last_name}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Customer:</label>
+                          <input type="text" class="form-control" name="customer" value="{{row.customer}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Loading point:</label>
+                          <input type="text" class="form-control" name="loading" value="{{row.loading}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Unloading point:</label>
+                          <input type="text" class="form-control" name="unloading" value="{{row.unloading}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Received amount:</label>
+                          <input type="number" class="form-control" name="received" value="{{row.received}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Shipping price:</label>
+                          <input type="number" class="form-control" name="price" value="{{row.price}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Payment method:</label>
+                          <input type="text" class="form-control" name="payment" value="{{row.payment}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Debt:</label>
+                          <input type="number" class="form-control" name="debt" value="{{row.debt}}">
+                        </div>
+                        <div class="form-group">
+                          <label>Comment:</label>
+                          <input type="text" class="form-control" name="comment" value="{{row.comment}}">
+                        </div>
+                        <div class="form-group">
+                          <button class="btn btn-primary" type="submit">Add</button>
+                        </div>
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                  </div>
+              </div>
+            </div>
+          </div>
+
+          
+
+
 
     </div>
   </div>
 </div>
 
-<main class="container p-5">
+
+<br><br><br>
+
+<!-- <main class="container p-5">
   <div class="container-fluid">
       
 
@@ -283,7 +290,7 @@ Dashboard
       </form>
   </div>  
 </main>
-
+ -->
 
 
     <!-- <nav class="navbar navbar-inverse navbar-fixed-top">
