--- a/templates/index.html
+++ b/templates/index.html
@@ -1,172 +1,14 @@
-{% extends "layout.html" %}
-
-{% block title %}
-Demo App
-{% endblock %}
-
-{% block styles %}
-{{super()}}
-<link rel="stylesheet" href="{{url_for('.static', filename='starter-template.css')}}">
-{% endblock %}
+{% extends 'base.html' %}
 
 {% block content %}
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
-      
 
-      
-  <div class="jumbotron text-center">
-    <h1>NAUM</h1>
-    <p>We specialize in ransportation of oversized cargo in Odessa and the Odessa region by manipulators and long meters</p>
-      <form class="form-inline">
-        <div class="input-group">
-          <input type="email" class="form-control" size="50" placeholder="Email Address" required>
-          <div class="input-group-btn">
-            <button type="button" class="btn btn-primary">Subscribe</button>
-          </div>
-        </div>
-      </form>
-  </div>
+	<h1>Hello World!</h1>
 
-<!-- Container (About Section) -->
-<div id="about" class="container-fluid">
-  <div class="row">
-    <div class="col-sm-8">
-      <h2>About NAUM</h2>
-      <h4>The NAUM company has successfully established itself in the construction market of Odessa, and is also a leader in the provision of services for the transportation of bulky goods and construction materials.</h4>      
-      <p>Our experience includes 10 years of hard work, and thousands of successfully completed orders.</p>
-      <p>We are offered comprehensive supplies of building materials (aerated concrete, brick, cement, building blocks, paving slabs), at affordable prices, with delivery to your facility.</p>
-      <p>The equipment of our company is in excellent working condition. With the help of the proposed machines, you can perform all the tasks in any conditions and at any time of the year.</p>
-      <a href="http://naum.od.ua/" class="btn btn-default btn-lg" role="button">Get in Touch</a>
-    </div>
-      <div class="col-sm-4">
-        <img src="/static/naumLogo.png" alt="logo" style="width:100%">
-      </div>
-  </div>
-</div>
+	<p>This is my first webpage!!!</p>
 
-<div class="container-fluid bg-grey">
-  <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-thumbs-up logo"></span>
-    </div>
-    <div class="col-sm-8">
-      <h2>The Capabilities Of The Crane Manipulator</h2>
-      <p>The crane manipulator saves you money on paying for equipment (one car instead of two), reduces the total time of loading and transporting cargo, and also allows you to carry out loading and unloading operations in a limited space. The service of renting a crane manipulator is very popular in Odessa, it allows you to load, transport and unload a variety of goods. All planned works at the facility will be carried out efficiently and in the shortest possible time. The manipulator cranes offered by us are installed on the basis of imported, modern cars, have different body length and load capacity.</p>
-      <dl>
-        <dd>- The crane manipulator has maneuverability that allows you to work in places inaccessible to other types of special equipment.</dd>
-        <dd>- Allows you to accurately adjust the boom departure when working in a confined space.</dd>
-        <dd>- Allows lifting and lowering loads through obstacles (walls, fences, other obstacles)</dd>
-        <dd>- Allows you to work with cargo located below ground level (in a pit, well)</dd>
-      </dl>
-    </div>
-  </div>
-</div>
+	
+	<br/><br/>
+	
 
-<!-- Container (Services Section) -->
-<div id="services" class="container-fluid text-center">
-  <h2>Recommendations For Renting A Crane Manipulator</h2>
-  <h4>What You Need To Know To Order A Crane Manipulator In Odessa</h4>
-  <br>
-  <div class="row">
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-retweet logo-small"></span>
-      <h4>DIMENSIONS</h4>
-      <p>Overall dimensions (weight and main parameters of the cargo)</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-resize-full logo-small"></span>
-      <h4>ROUTE</h4>
-      <p>Transportation route (loading and unloading address)</p>
-    </div>
-    <div class="col-sm-4">
-      <span class="glyphicon glyphicon-road logo-small"></span>
-      <h4>ROAD QUALITY</h4>
-      <p>The quality of roads, as cargo transportation by crane manipulator, is a rather complicated process</p>
-    </div>
-  </div>
-</div>
-<!-- Container (Portfolio Section) -->
-<div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Portfolio</h2>
-  <div class="row text-center">
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="/static/man1.png" alt="Manipulator1">
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="/static/man2.png" alt="Manipulator2">
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <div class="thumbnail">
-        <img src="/static/man3.png" alt="Manipulator3">
-      </div>
-    </div>
-</div>
-
-<h2>What our customers say</h2>
-  <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
-    <!-- Indicators -->
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-      <h4>"I order manipulator services quite often and I can say with confidence that in this company I always offer a favorable price and select the right equipment, I do not have to think myself what kind of load capacity to order for a particular cargo, I name the route and characteristics of the cargo, the guys pick up special equipment for me and assign the cost. I recommend it to everyone."<br><span style="font-style:normal;">Igor Vasilyevich</span></h4>
-      </div>
-      <div class="item">
-        <h4>"In March, I rented a manipulator in Odessa. They were transporting bricks, I didn't even expect that thirty tons could be transported at once in one flight. Thanks to the manipulator with the trailer, we coped twice as fast as expected and saved a decent amount. Thanks to Nikolai for picking up the right technique for me. I want to express my gratitude to the head of the company for the discount provided."<br><span style="font-style:normal;">Natalya</span></h4>
-      </div>
-      <div class="item">
-        <h4>"Hello! I want to express my gratitude to you once again for the help you have given me. The manipulator was served within half an hour after the call, I did not even expect such a fast feed, and I really liked how the operator of the manipulator crane worked - very professionally, the conditions were cramped, they were served at a height of 20 meters, not everyone can cope with such a task. Thanks!"<br><span style="font-style:normal;">Fadeev Andrey Vasilyevich</span></h4>
-      </div>
-    </div>
-    <!-- Left and right controls -->
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-  
-  <!-- Container (Contact Section) -->
-  <div id="contact" class="container-fluid bg-grey"> 
-    <h2 class="text-center">CONTACT</h2>
-    <div class="row">
-      <div class="col-sm-5 text-left">
-        <p>Contact us and we'll get back to you within 1 hour.</p>
-        <p><span class="glyphicon glyphicon-phone"></span> +38 (067) 733-66-88</p>
-        <p><span class="glyphicon glyphicon-envelope"></span> office.naum@gmail.com</p>
-        <p><span class="glyphicon glyphicon-map-marker"></span> Promyslova St., 35, Odessa, UA</p>
-      </div>
-      <div class="col-sm-7">
-        <div class="row">
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
-          </div>
-          <div class="col-sm-6 form-group">
-            <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
-          </div>
-        </div>
-        <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea><br>
-        <div class="row">
-          <div class="col-sm-12 form-group">
-            <button class="btn btn-default pull-right" type="submit">Send</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  
-  <!--Map-->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2747.1945136949676!2d30.66480209543518!3d46.4844607005007!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c62de25b91f8e3%3A0x8ac9eb9a7c5618b6!2sPromyslova%20St%2C%2035%2C%20Odesa%2C%20Odes&#39;ka%20oblast%2C%2065000!5e0!3m2!1sen!2sua!4v1640374283922!5m2!1sen!2sua" width="800" height="450" style="border:0; width:100%" allowfullscreen="" loading="lazy"></iframe> 
 
 {% endblock %}
