--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,30 +1,52 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>                        
-        </button>
-      <a class="navbar-brand" href="/">NAUM</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="{{ url_for('index') }}">Flasker</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('user', name='John')}}">User Profile</a>
+          </li>
+  
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('name')}}">Name</a>
+          </li>
+          
+          {% if current_user.is_authenticated %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('dashboard')}}">Dashboard</a>
+            </li>
+  
+            {% if current_user.id == 1 %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('admin')}}">Admin</a>
+            </li>
+            {% endif %}
+  
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('logout')}}">Logout</a>
+            </li>
+          {% else %}
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('add_user')}}">Register</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="{{ url_for('login')}}">Login</a>
+            </li>
+          {% endif %}
+          <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('add_post')}}">Add New Route</a>
+          </li>
+  
+           <li class="nav-item">
+            <a class="nav-link" href="{{ url_for('posts')}}">Routes</a>
+          </li>
+          
+          
+        </ul>
       </div>
-      <div class="collapse navbar-collapse" id="myNavbar">
-        {% if current_user.username %}
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="/dashboard">Dashboard</a></li>
-            <li><a href="/change">Change Password</a></li>
-            <li><a href="/logout">Log Out</a></li>
-          </ul>
-        {% else %}
-          <ul class="nav navbar-nav navbar-right">
-            <li><a href="#about">ABOUT</a></li>
-            <li><a href="#services">SERVICES</a></li>
-            <li><a href="#portfolio">PORTFOLIO</a></li>
-            <li><a href="#contact">CONTACT</a></li>
-            <li><a href="/signup">SIGN UP</a></li>
-            <li><a href="/login">LOGIN</a></li>
-          </ul>
-        {% endif %}
-      </div> 
     </div>
   </nav>
